[gd_scene load_steps=7 format=3 uid="uid://b7rpu2eiydidn"]

[ext_resource type="Script" uid="uid://wmyj7sf2qfhu" path="res://SpeedReader.gd" id="1_iq8i0"]
[ext_resource type="FontFile" uid="uid://c55x50yepnavk" path="res://fonts/Poppins/Poppins-Light.ttf" id="2_v4uy4"]
[ext_resource type="Script" uid="uid://cdmdowrdnm7vn" path="res://TextContainer.gd" id="2_xdc5n"]
[ext_resource type="Script" uid="uid://b3uukynvdg636" path="res://FullText.gd" id="3_f3hev"]
[ext_resource type="Script" uid="uid://ckutroofw2701" path="res://dialog/InputDialog.gd" id="5_q068l"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_iq8i0"]
color = Color(0.18, 0.18, 0.18, 1)
thickness = 3
vertical = true

[node name="SpeedReader" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iq8i0")

[node name="VSeparator" type="VSeparator" parent="."]
custom_minimum_size = Vector2(0, 450)
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/separator = SubResource("StyleBoxLine_iq8i0")

[node name="VSeparator2" type="VSeparator" parent="."]
custom_minimum_size = Vector2(0, 450)
layout_mode = 2
size_flags_vertical = 8
theme_override_styles/separator = SubResource("StyleBoxLine_iq8i0")

[node name="Timer" type="Timer" parent="."]

[node name="TextContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 8
script = ExtResource("2_xdc5n")

[node name="FileDialog" type="FileDialog" parent="TextContainer"]
oversampling_override = 1.0
ok_button_text = "Salvar"
cancel_button_text = "Cancelar"
access = 2
use_native_dialog = true

[node name="AcceptDialog" type="AcceptDialog" parent="TextContainer"]
title = "Aviso!"
force_native = true

[node name="InputDialog" type="AcceptDialog" parent="TextContainer"]
script = ExtResource("5_q068l")
metadata/_custom_type_script = "uid://ckutroofw2701"

[node name="VBoxContainer" type="VBoxContainer" parent="TextContainer"]
layout_mode = 2

[node name="Top" type="MarginContainer" parent="TextContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="TextContainer/VBoxContainer/Top"]
layout_mode = 2

[node name="File" type="MenuButton" parent="TextContainer/VBoxContainer/Top/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Arquivo"
flat = false
item_count = 5
popup/item_0/text = "Novo"
popup/item_0/id = 0
popup/item_1/text = "Abrir"
popup/item_1/id = 1
popup/item_2/text = "Importar"
popup/item_2/id = 2
popup/item_3/text = "Salvar"
popup/item_3/id = 3
popup/item_4/text = "Salvar como"
popup/item_4/id = 4

[node name="Edit" type="Button" parent="TextContainer/VBoxContainer/Top/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
mouse_default_cursor_shape = 2
toggle_mode = true
text = "Editar"

[node name="Button" type="Button" parent="TextContainer/VBoxContainer/Top/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
mouse_default_cursor_shape = 2
text = "Configurações"

[node name="FullText" type="RichTextLabel" parent="TextContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("2_v4uy4")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
fit_content = true
autowrap_mode = 2
script = ExtResource("3_f3hev")

[node name="WordButton" type="Button" parent="TextContainer/VBoxContainer/FullText"]
modulate = Color(1.2060356, 5.1045413, 5.076487, 0)
show_behind_parent = true
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
focus_mode = 0
mouse_default_cursor_shape = 2

[node name="TextEdit" type="TextEdit" parent="TextContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Escreva algo..."

[node name="Bottom" type="MarginContainer" parent="TextContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="TextContainer/VBoxContainer/Bottom"]
layout_mode = 2

[node name="LeftPage" type="Button" parent="TextContainer/VBoxContainer/Bottom/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
disabled = true
text = "<"

[node name="Pages" type="RichTextLabel" parent="TextContainer/VBoxContainer/Bottom/HBoxContainer"]
layout_mode = 2
text = "0/0"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightPage" type="Button" parent="TextContainer/VBoxContainer/Bottom/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
disabled = true
text = ">"

[connection signal="file_selected" from="TextContainer/FileDialog" to="TextContainer" method="_on_file_dialog_file_selected"]
[connection signal="toggled" from="TextContainer/VBoxContainer/Top/HBoxContainer/Edit" to="TextContainer" method="_on_edit_toggled"]
[connection signal="pressed" from="TextContainer/VBoxContainer/FullText/WordButton" to="TextContainer/VBoxContainer/FullText" method="_on_word_button_pressed"]
[connection signal="pressed" from="TextContainer/VBoxContainer/Bottom/HBoxContainer/LeftPage" to="TextContainer/VBoxContainer/FullText" method="_on_left_page_pressed"]
[connection signal="pressed" from="TextContainer/VBoxContainer/Bottom/HBoxContainer/RightPage" to="TextContainer/VBoxContainer/FullText" method="_on_right_page_pressed"]
